[tool.poetry]
name = "metalmask"
version = "0.1.0"
description = "a data masking framework powered by ai"
authors = ["harmonichemispheres <robby.boney@harmonichemispheres.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.2"
openai = "^1.23.2"
typer = "^0.12.3"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mmask = 'metalmask.cli:app'